<resources>
    <string name="app_name">MUNAM</string>
    <string name="infoMuseoTitulo">Historia del Museo:</string>

    <string name="infoMuseo">El edificio que alberga el Museo Nacional de Arte Moderno
        de Guatemala fue construido por el Arquitecto Manuel Roberto Moreno Barahona e
        inaugurado en 1939, cuenta con tres espacios dedicados a las Artes Visuales:
        La Sala de Exposición Permanente, la Sala Carlos Mérida, y la Sala de Exposiciones
        Temporales, que es un espacio activo, una ventana abierta a la contemporaneidad
        nacional e internacional y sus diversas manifestaciones artísticas.</string>

    <string name="infoSalaCarlosMerida">La Sala de Exposición Permanente, que resguarda
        como patrimonio nacional, una cronología de cien años de obras de arte
        guatemaltecas; la Sala Carlos Mérida, dedicada exclusivamente a la obra del
        maestro y la Sala de Exposiciones Temporales, que es un espacio activo, una
        ventana abierta a la contemporaneidad nacional e internacional y sus diversas
        manifestaciones artísticas.</string>

    <string name="infoSalas">
        Hoy el Museo permanece como la joya central del arte moderno de Guatemala.
        colección ejemplifica el amplio abanico de expresión de la modernidad en el país,
        en el período comprendido desde el año 1900 hasta el 2000.</string>

    <string name="hint_email">Email:</string>
    <string name="hint_password">Password:</string>
    <string name="createAcoount_Button">Create Account</string>
    <string name="signIn_Button">Sign in</string>

    <string name="label_iniciosesion">Iniciar sesión con:</string>

    <string name="facebook_app_id">359970405007385</string>
    <string name="fb_login_protocol_scheme">fb359970405007385</string>

    <string name="prefs_file">com.example.loginfacebook.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_Logout">Cerrar Sesión</string>


    <!-- Horarios de atención al público en el museo-->
    <string name="hrs_lunes">Cerrado al público</string>
    <string name="hrs_Entre">De 9:00hrs a 16:00hrs.</string>
    <string name="hrs_Fin">De 9:00hrs a 12:00hrs y de 13:30hrs a 16:00hrs.</string>

    <string name="invalid_move">Invalid move</string>
    <string name="winner">YOU WIN!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
