<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.Fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--Museo Historia-->
            <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardHistoria"
                    style="@style/CardsView">
                    <LinearLayout
                        style="@style/CodeLinearLayout">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="194dp"
                            android:contentDescription="MUNAM"
                            android:scaleType="centerCrop"
                            android:src="@drawable/museofrente" />

                        <LinearLayout
                            style="@style/CodeLinearLayout"
                            android:padding="16dp">
                            <TextView
                                style="@style/cardstitle"
                                android:text="Historia"/>
                            <TextView
                                style="@style/cardssubtitle"
                                android:layout_marginTop="16dp"
                                android:text="@string/infoMuseo"/>
                    </LinearLayout>
                    </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <!--Museo Dentro-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardMuseoDentro"
                style="@style/CardsView">
                <LinearLayout
                    style="@style/CodeLinearLayout">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:contentDescription="MUNAM"
                        android:scaleType="centerCrop"
                        android:src="@drawable/museo_vista_aerea" />

                    <LinearLayout
                        style="@style/CodeLinearLayout"
                        android:padding="16dp">
                        <TextView
                            style="@style/cardstitle"
                            android:text="Museo"/>
                        <TextView
                            style="@style/cardssubtitle"
                            android:layout_marginTop="16dp"
                            android:text="@string/infoSalas"/>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <!--Museo Carlos Merida-->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardCarlosMerida"
                style="@style/CardsView">
                <LinearLayout
                    style="@style/CodeLinearLayout">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="194dp"
                        android:contentDescription="MUNAM"
                        android:scaleType="centerCrop"
                        android:src="@drawable/carlosmerida" />

                    <LinearLayout
                        style="@style/CodeLinearLayout"
                        android:padding="16dp">
                        <TextView
                            style="@style/cardstitle"
                            android:text="Sala Carlos Mérida"/>
                        <TextView
                            style="@style/cardssubtitle"
                            android:layout_marginTop="16dp"
                            android:text="@string/infoSalaCarlosMerida" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>