<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Toolbar
            android:id="@+id/toolbarUbication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <!-- Image Lugar -->
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:src="@drawable/sala_carlos_merida"
                    android:scaleType="centerCrop"/>
                <!-- Horarios-->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@color/colorBeshPalido">
                    <LinearLayout
                        style="@style/CodeLinearLayout"
                        android:padding="16dp"
                        android:background="@drawable/shape_parrafo">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Horarios de Atención"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorNegro"
                            android:gravity="center_horizontal"
                            android:layout_centerInParent="true"
                            android:layout_margin="5dp"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginBottom="10dp">
                            <TextView
                                style="@style/cardstitle"
                                android:text="• Lunes"
                                android:paddingRight="10dp"/>
                            <TextView
                                style="@style/cardssubtitle"
                                android:text="@string/hrs_lunes"
                                android:layout_marginLeft="15dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginBottom="10dp">
                            <TextView
                                style="@style/cardstitle"
                                android:text="• Martes a Viernes"
                                android:paddingRight="10dp"/>
                            <TextView
                                style="@style/cardssubtitle"
                                android:text="@string/hrs_Entre"
                                android:layout_marginLeft="15dp"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:paddingBottom="10dp">
                            <TextView
                                style="@style/cardstitle"
                                android:text="• Sábado y Domingo"
                                android:paddingRight="10dp"/>
                            <TextView
                                style="@style/cardssubtitle"
                                android:text="@string/hrs_Fin"
                                android:layout_marginLeft="15dp"/>
                        </LinearLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
                <!-- Card -->
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="@color/colorBeshPalido">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="@drawable/shape_parrafo">
                        <!-- Lugar Config -->
                        <TextView
                            android:id="@+id/tvDetailNombreLugar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Localización"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            android:textColor="@color/colorNegro"
                            android:gravity="center_horizontal"
                            android:layout_centerInParent="true"
                            android:layout_margin="5dp"/>
                        <!-- Direccion -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="20dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_pin"/>
                            <TextView
                                android:id="@+id/tvUbicationDireccion"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Direccion"
                                android:textSize="15sp"
                                android:textColor="@color/colorNegro"
                                android:gravity="left"
                                android:layout_margin="5dp"/>
                        </LinearLayout>
                        <!-- Telefono Lugar -->
                        <LinearLayout
                            android:id="@+id/llTelefonoLugar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="20dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_phone"/>
                            <TextView
                                android:id="@+id/tvUbicationTelefono"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Telefono lugar"
                                android:textSize="15sp"
                                android:textColor="@color/colorNegro"
                                android:gravity="left"
                                android:layout_margin="5dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" / "
                                android:textSize="15sp"
                                android:textColor="@color/colorNegro"
                                android:gravity="left"
                                android:layout_margin="5dp"/>
                            <TextView
                                android:id="@+id/tvUbicationTelefono2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Telefono lugar"
                                android:textSize="15sp"
                                android:textColor="@color/colorNegro"
                                android:gravity="left"
                                android:layout_margin="5dp"/>
                        </LinearLayout>
                        <!-- Sitio Web -->
                        <LinearLayout
                            android:id="@+id/llSitioWeb"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="20dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_link"/>
                            <TextView
                                android:id="@+id/tvUbicationWebsite"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Sitio Web"
                                android:textSize="15sp"
                                android:textColor="@color/colorNegro"
                                android:gravity="left"
                                android:layout_margin="5dp"/>
                        </LinearLayout>
                        <!-- Facebook -->
                        <LinearLayout
                            android:id="@+id/llFacebook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="20dp">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="25dp"
                                android:src="@drawable/ic_facebook"/>
                            <TextView
                                android:id="@+id/tvUbicationFacebook"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Facebook"
                                android:textSize="15sp"
                                android:textColor="@color/colorNegro"
                                android:gravity="left"
                                android:layout_margin="5dp"/>
                        </LinearLayout>

                    </LinearLayout>
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>